# Kismet-OS

./: .gitignore  README.md  index.html
docs/: architecture.md  base-distribution.md  build-plan.md  client-requirements.md  current-blockers.md  distro-dev-patterns.md  email-derived-priorities.md  first-bootable-preview-path.md  fundamentals.md  iso-next-step-2026-04-19.md  iso-next-steps.md  iso-workflow.md  next-implementation-queue.md  preview-artifact-goal.md  roadmap.md  tomorrow-goal.md  tonight-target.md  vision.md  zimaos-build-strategy.md  zorin-direction.md
kismet-agent/: README.md  pyproject.toml
kismet-agent/src/kismet_agent/: cli.py  db.py  hardware.py  models.py  monitor.py  paths.py  server.py
kismet-base/: README.md  package-manifest.ubuntu
kismet-build/: Dockerfile.qemu-test  Dockerfile.ubuntu-build  README.md  apply-kismet-overlay.sh  assemble-rootfs.sh  boot-preview-in-qemu.sh  build-ubuntu-preview.sh  detect-livefs-path.sh  extract-ubuntu-iso.sh  fetch-ubuntu-base.sh  force-kismet-branding.sh  install-kismet-packages-into-rootfs.sh  make-dev-preview-layout.sh  overlay-kismet-files.sh  package-manifest-utils.sh  patch-bootloader-branding.sh  prepare-live-rootfs.sh  rebuild-iso.sh  refresh-iso-metadata.sh  render-chroot-install.sh  render-package-plan.sh  repack-live-rootfs.sh  run-pipeline-in-container.sh  run-preview-cycle.sh  run-smoke-test.sh  run-ubuntu-build-env.sh  scan-preview-branding.py  setup-live-user.sh  smoke-test-preview.sh  test-preview-in-container.sh
kismet-ctl/: README.md
kismet-firstboot/: README.md  brand-notes.md  (+1 more)
(+63 files in other folders)
